force-app/main/default/objects/InterfaceRouteManager__c/InterfaceRouteManager__c.object-meta.xml
<CustomObject>
    <label>I/F Route Manager</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>