force-app/main/default/objects/InterfaceRouteManager__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>인터페이스 사용 여부</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>