force-app/main/default/objects/InterfaceRouteManager__c/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>ContentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>