force-app/main/default/objects/InterfaceRouteManager__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <label>Outbound(Only)</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
                <label>Inbound(Only)</label>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>