force-app/main/default/objects/InterfaceRouteManager__c/fields/DispatcherClass__c.field-meta.xml
<CustomField>
    <fullName>DispatcherClass__c</fullName>
    <label>Dispatcher Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>