force-app/main/default/objects/InterfaceRouteManager__c/fields/ExampleParam__c.field-meta.xml
<CustomField>
    <fullName>ExampleParam__c</fullName>
    <label>Example Param</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>