force-app/main/default/objects/InterfaceRouteManager__c/fields/ExampleResponse__c.field-meta.xml
<CustomField>
    <fullName>ExampleResponse__c</fullName>
    <label>Example Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>