force-app/main/default/objects/InterfaceRouteManager__c/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <label>Interface ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>