force-app/main/default/objects/InterfaceRouteManager__c/fields/MapperClass__c.field-meta.xml
<CustomField>
    <fullName>MapperClass__c</fullName>
    <label>Mapper Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>