force-app/main/default/objects/InterfaceRouteManager__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <description>인터페이스시 DML이 발생되는 오브젝트</description>
    <label>Target Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>