force-app/main/default/objects/InterfaceRouteManager__c/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target System</label>
    <referenceTo>LegacySystem__c</referenceTo>
    <relationshipLabel>I/F Route Manager</relationshipLabel>
    <relationshipName>InterfaceRouteManager</relationshipName>
    <type>Lookup</type>
</CustomField>