force-app/main/default/objects/InterfaceRouteManager__c/fields/UriAddress__c.field-meta.xml
<CustomField>
    <fullName>UriAddress__c</fullName>
    <description>ex) /api/rest/sap/IF_SA_SF_0007</description>
    <label>Uri Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>