force-app/main/default/objects/InterfaceRouteManager__c/recordTypes/REST.recordType-meta.xml
<RecordType>
    <fullName>REST</fullName>
    <active>true</active>
    <label>REST</label>
</RecordType>