force-app/main/default/objects/InterfaceRouteManager__c/recordTypes/RFC.recordType-meta.xml
<RecordType>
    <fullName>RFC</fullName>
    <active>true</active>
    <label>RFC</label>
</RecordType>