force-app/main/default/objects/InterfaceRouteManager__c/recordTypes/SOAP.recordType-meta.xml
<RecordType>
    <fullName>SOAP</fullName>
    <active>true</active>
    <label>SOAP</label>
</RecordType>